--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
       *{
         font-family: 'cerebrisans' !important;
       }
+      .modal-backdrop{
+        background-color: #12263f3b !important;
+      }
     </style>
 
     <title><%= htmlWebpackPlugin.options.title %></title>
